# llena

./: .gitignore  README.md  common.py  main.py  pyproject.toml  train.py  work.md
.codex/: config.toml
.codex/rules/: default.rules
configs/: qwen2_5_0_5b.yaml  qwen2_5_0_5b_docvqa_sample.yaml  qwen2_5_0_5b_textvqa_eval.yaml  qwen2_5_1.5b.yaml  qwen2_5_7b.yaml
configs/A100/: llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml
configs/L4/: llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml
configs/T4/: llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml
configs/cloud/: docvqa_eval.yaml  docvqa_train.yaml  llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_coco_stage1.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml  textvqa_eval.yaml  textvqa_train.yaml
configs/cpu/: llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml
configs/local/: docvqa_eval.yaml  docvqa_train.yaml  llava_textvqa_train_qwen2.5-0.5b_siglip224.yaml  sharegpt4v_coco_stage1.yaml  sharegpt4v_train_qwen2.5-0.5b_siglip224.yaml  textvqa_eval.yaml  textvqa_train.yaml
data/: download.py  format.py  hf_specs.py  synthetic.py
datasets/: samples.json
mm/: collator.py  config.py  model.py  projectors.py  run_config.py  types.py
notebooks/: inspect_pipeline.ipynb
runners/: run_cloud_eval.sh  run_cloud_llava_instruct.sh  run_data_prep.sh  run_e2e.sh  run_local_eval.sh  run_local_llava_instruct.sh  run_local_pipeline.sh  run_local_sharegpt4v_coco.sh  run_pipeline.sh  run_pipeline_smoke.sh  run_stage1.sh  run_stage2.sh  setup.sh
scripts/: __init__.py  bench_ckpt_load.py  convert_dataset.py  download_dataset.py  download_llava_instruct.py  download_sharegpt4v_coco.py  e2e_smoke.py  eval.py  find_image_datasets.py  probe_batch_sizes.py  process_dataset.py  process_llava_instruct.py  process_sharegpt4v_coco.py  run_cloud_eval.sh  run_cloud_sharegpt4v_coco.sh  run_e2e_smoke_docvqa_sample.sh  run_local_eval.sh  run_local_train.sh  run_pipeline.py  train.py  utils.py
tests/: test_collator_masking.py  test_eval_metrics.py  test_eval_samples.py  test_liger_integration.py  test_model_forward.py  test_peft.py  test_probe_batch_sizes.py  test_run_config.py  test_synthetic_dataset.py  test_train_build_dataset.py  test_train_wandb_resume.py
